@@ -4,14 +4,13 @@ use P5built-ins;
 
 my @supported = <
   caller chdir chomp chop chr closedir each endgrent endnetent endprotoent
-  endpwent endservent fc fileno getgrent getgrgid getgrnam getlogin
-  getnetbyaddr getnetbyname getnetent getprotobyname getprotobynumber
-  getprotoent getpwent getpwnam getpwuid getservbyname getservbyport
-  getservent gmtime hex index lc lcfirst length localtime oct opendir
-  ord pack pop print printf push quotemeta readdir readlink ref reverse
-  rewinddir rindex say seek seekdir setgrent setnetent setprotoent
-  setpwent setservent shift sleep study substr telldir tie tied times
-  uc ucfirst unpack unshift untie
+  endpwent endservent fc fileno getgrent getgrgid getgrnam getlogin getnetbyaddr
+  getnetbyname getnetent getpgrp getppid getpriority getprotobyname getprotobynumber
+  getprotoent getpwent getpwnam getpwuid getservbyname getservbyport getservent
+  gmtime hex index lc lcfirst length localtime oct opendir ord pack pop print printf
+  push quotemeta rand readdir readlink ref reset reverse rewinddir rindex say seek
+  seekdir setgrent setnetent setpriority setprotoent setpwent setservent shift sleep 
+  srand study substr telldir tie tied times uc ucfirst unpack unshift untie
 
   prefix:<-r> prefix:<-w> prefix:<-x> prefix:<-e> prefix:<-d> prefix:<-f>
   prefix:<-s> prefix:<-z> prefix:<-l>
@@ -23,7 +22,7 @@ my @supported = <
   '&term:<__FILE__>',
   '&term:<__LINE__>',
   '&term:<__PACKAGE__>',
-  '&term:<__LINE__>',
+  '&term:<__SUB__>',
   '&term:<STDERR>',
   '&term:<STDIN>',
   '&term:<STDOUT>',
